c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/rh_assignment.c
int main(void) {
    int flag = 1;
    int a = 0;
    flag ? a = 1 : (a = 0);
    return a;
}