c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_parse/extra_credit/goto_without_label.c
int main(void) {
    goto;
lbl:
    return 0;
}